# JaPy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ジャパイ.py
japy/: __init__.py  __main__.py  core.py  japy.py  コマンド.py  ジャパイ.japy  ジャパイ.py
scripts/: release.sh
src/: japy.py  ジャパイ.py
vscode-extension/: INSTALL.md  README.md  build.sh  language-configuration.json  package-lock.json  package.json  test-example.japy  test-japanese-symbols.japy
vscode-extension/src/: completionProvider.ts  extension.ts
vscode-extension/syntaxes/: japy.tmLanguage.json
vscode-extension/themes/: japy-dark-color-theme.json
