[project]
name = "japy-lang"
version = "0.1.1"
description = "JaPy is a Python dialect in Japanese."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Zhe", email = "i@zzhe.dev" },
]
keywords = ["japanese", "python", "transpiler", "katakana", "programming-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Natural Language :: Japanese",
]
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/satoi8080/JaPy"
Repository = "https://github.com/satoi8080/JaPy"
Issues = "https://github.com/satoi8080/JaPy/issues"

[project.scripts]
japy = "japy.japy:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["japy"]

[dependency-groups]
dev = []
